--- a/public/assets/css/wtf-fu-show-files.css
+++ b/public/assets/css/wtf-fu-show-files.css
@@ -11,19 +11,20 @@
         Arial,
         Helvetica,
         sans-serif;
-    border: 1px solid gray;
+ //   border: 1px solid gray;
 }
-li.list div.reorder-number
+.reorder-number
 {
-    background: white;
-    color: blue;
+    background: black;
+    color: white;
+    font-weight: bold;    
     float: left;
     padding-left: 5px;
     padding-right: 5px;
     position: relative;
-    top: -78px;
+    top: -80px;
     z-index: 2;
-    opacity: 0.5;
+    opacity: 0.7;
 }
  
 .items.ui-selected {
@@ -57,7 +58,7 @@ li.list div.reorder-number
 #sort_container {
     float:left;
     width:100%;
-    border:1px solid black;
+   // border:1px solid black;
     height:100%;
     // overflow: auto;
     //border:2px solid blue;
@@ -70,7 +71,7 @@ li.list div.reorder-number
     margin: 0px; 
     padding: 0px 0px 50px 20px;
     float: left; 
-    //border:2px solid red;
+  //  border:2px solid red;
 }
 
 #reorder_sortable li { 
@@ -91,7 +92,7 @@ li.list div.reorder-number
 //    height:100%;
     float: left;
 //    overflow: auto;
-    border:2px solid blue;
+//    border:2px solid blue;
 }
 
 
