--- a/public/assets/css/wtf-fu-show-files.css
+++ b/public/assets/css/wtf-fu-show-files.css
@@ -1,116 +1,50 @@
 /* 
-* This stylesheet is loaded for the file-reorder shortcode.
-*/
-
-.list {
-//    background-color: pink;
-    font-size: 30px;
-    text-align: center;
-    cursor: pointer;
-    font-family: Geneva,
-        Arial,
-        Helvetica,
-        sans-serif;
- //   border: 1px solid gray;
-}
+ * Stylesheet presentation for the [wtf_fu_showfiles] shortcode output.
+ */
 .reorder-number
 {
+    position: absolute;
     background: black;
     color: white;
-    font-weight: bold;    
+    font-weight: bold;  
+    font-size: 1em; 
     float: left;
     padding-left: 5px;
     padding-right: 5px;
-    position: relative;
-    top: -80px;
-    z-index: 2;
+    top: 0;
+    left: 0;
+    z-index: 100;
     opacity: 0.7;
 }
- 
-.items.ui-selected {
-    background: red;
-    color: white;
-    font-weight: bold;
-}
- 
-.items {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
- 
-.items li {
-    float: left;
-    margin: 2px;
-    padding: 2px;
-    width: 50px;
-    height: 50px;
-    line-height: 50px;
-}
- 
-.highlight {
-    border: 2px solid red;
-    font-weight: bold;
-    font-size: 50px;
-    background-color: lightblue;
-}
 
-#sort_container {
+#sort_container, #files_container {
     float:left;
     width:100%;
-   // border:1px solid black;
     height:100%;
-    // overflow: auto;
-    //border:2px solid blue;
 }
 
 
-#reorder_sortable { 
+#reorder_sortable li.list a img, #files_list li.list a img
+ {
+    position: absolute;
+    top: 0;
+    left: 0;  
+}
+
+#reorder_sortable, #files_list { 
     overflow:auto; 
     list-style-type: none; 
     margin: 0px; 
-    padding: 0px 0px 50px 20px;
     float: left; 
-  //  border:2px solid red;
 }
 
-#reorder_sortable li { 
-    margin: 0; 
-    list-style-type: none;
-    padding: 10px; 
+#reorder_sortable li, #files_list li { 
+    position: relative;
+    margin: 6px; 
+    list-style-type: none; 
     float: left; 
-    width: 100px; 
-    height: 100px; 
+    width: 80px; 
+    height: 80px; 
     font-size: 1em; 
     text-align: center; 
-}
-
-#files_container {
-    float:left;
-    width:100%;
- //   border:1px solid red;
-//    height:100%;
-    float: left;
-//    overflow: auto;
-//    border:2px solid blue;
-}
-
-
-#files_list {
-//    overflow:auto; 
-    list-style-type: none; 
-    margin: 0px; 
-    padding: 20px; 
-    float: left;           
-}
-
-#files_list li { 
-    margin: 0; 
-    padding: 10px; 
-    float: left; 
-//    width: 100%; 
-//    height: 100%; 
-    font-size: 1em; 
-    text-align: left;
-    vertical-align: middle;
 }
