clean up js and css code, added spinners and button disable during ajax calls.
git-svn-id: https://plugins.svn.wordpress.org/work-the-flow-file-upload/trunk@907759 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/public/assets/css/workflow_default.css
+++ b/public/assets/css/workflow_default.css
@@ -2,6 +2,19 @@
  * Default stylesheet for Workflow pages,
  */
 
+.workflow-process {
+  float: right;
+  display: none;
+}
+.workflow-processing .workflow-process
+{
+  display: block;
+  width: 32px;
+  height: 32px;
+  background: url("../img/loading.gif") center no-repeat;
+  background-size: contain;
+}
+
 .tbs code {
     background-color: #F9F2F4;
     border-radius: 4px;
