--- a/public/assets/css/wtf-fu-show-files.css
+++ b/public/assets/css/wtf-fu-show-files.css
@@ -1,6 +1,37 @@
 /* 
  * Stylesheet presentation for the [wtf_fu_showfiles] shortcode output.
  */
+
+#reorder_button_container, #reorder_button, #reorder_message, #reorder_submit_button {
+    display: block;
+    float: left;
+}
+
+#reorder_button_container {
+    margin-right: 15px;
+}
+
+#reorder_message {
+    padding-left: 30px; 
+    padding-top: 10px; 
+    padding-bottom: 30px; 
+    padding-right: 20px; 
+    font-size: 1.2em; 
+}
+
+.reorder-process {
+    float: right;
+    display: none;
+}
+.reorder-processing .reorder-process
+{
+    display: block;
+    width: 32px;
+    height: 32px;
+    background: url("../img/loading.gif") center no-repeat;
+    background-size: contain;
+}
+
 .reorder-number
 {
     position: absolute;
@@ -25,14 +56,14 @@
 
 
 #reorder_sortable li.list a img, #files_list li.list a img
- {
+{
     position: absolute;
     top: 0;
     left: 0;  
 }
 
 #reorder_sortable, #files_list { 
-    overflow:auto; 
+    //    overflow:auto; 
     list-style-type: none; 
     margin: 0px; 
     float: left; 
