--- a/public/assets/css/wtf-fu-show-files.css
+++ b/public/assets/css/wtf-fu-show-files.css
@@ -51,12 +51,22 @@
     opacity: 0.7;
 }
 
+#reorder_sortable.vertical li.list a, #reorder_sortable.vertical li.list p.pad_top_20px {   
+    float: none;
+    color: inherit;
+}
+
+#reorder_sortable.vertical li.list a span {
+    float: none;
+}
 /* filename padding */
 li.list p.pad_top_20px {
     position: relative;
     top: 18px;
     float: left;
-    margin:0px;    
+    margin:0px; 
+    z-index: 100;
+
     //left: 15px;  
 }
 
@@ -72,12 +82,10 @@ li.list p.pad_top_20px {
     position: absolute;
     top: 0;
     left: 0;  
-//    border: tomato;
-//    border-style: groove;    
+   
 }
 
 #reorder_sortable, #files_list { 
-    //    overflow:auto; 
     list-style-type: none; 
     margin: 0px; 
     float: left; 
@@ -93,7 +101,9 @@ li.list p.pad_top_20px {
     font-size: 1em; 
     text-align: center; 
     overflow: hidden;
-    background: threedshadow;
+    border: #333333;
+    border-style: outset; 
+   // background: #002D7A;
 }
 
 #reorder_sortable li.list audio, #files_list li.list audio
@@ -104,18 +114,23 @@ li.list p.pad_top_20px {
     bottom: 0;
     left: 0; 
     opacity: 0.6;
-    z-index: 100;
+    z-index: 200;
 }
 
 /* vertical overrides */
 #reorder_sortable.vertical li.list, #files_list.vertical li.list {
-    width: 250px; 
-//    height: 250px; 
+    width: 300px;  
+    height: 87px;
     float: none;
     overflow: inherit;
 }
 
 #reorder_sortable.vertical li.list audio, #files_list.vertical li.list audio {
-    width: 250px;
-    opacity: .8; 
+    width: 294px;
+    opacity: .7; 
+}
+
+#reorder_sortable.vertical li.list a {
+    padding-left: 50px;
+    padding-top: 30px;
 }
