--- a/public/assets/css/wtf-fu-show-files.css
+++ b/public/assets/css/wtf-fu-show-files.css
@@ -1,19 +1,14 @@
-/* 
- * Stylesheet presentation for the [wtf_fu_showfiles] shortcode output.
- */
+/* Stylesheet presentation for the [wtf_fu_showfiles] shortcode output. */
 #wtf_fu_show_files_output {
     float: left;
 }
-
 #reorder_button_container, #reorder_button, #reorder_message, #reorder_submit_button {
     display: block;
     float: left;
 }
-
 #reorder_button_container {
     margin-right: 15px;
 }
-
 #reorder_message {
     padding-left: 30px; 
     padding-top: 10px; 
@@ -21,7 +16,6 @@
     padding-right: 20px; 
     font-size: 1.2em; 
 }
-
 .reorder-process {
     float: right;
     display: none;
@@ -34,7 +28,6 @@
     background: url("../img/loading.gif") center no-repeat;
     background-size: contain;
 }
-
 .reorder-number
 {
     position: absolute;
@@ -50,47 +43,41 @@
     z-index: 100;
     opacity: 0.7;
 }
-
 #reorder_sortable.vertical li.list a, #reorder_sortable.vertical li.list p.pad_top_20px {   
     float: none;
     color: inherit;
 }
-
 #reorder_sortable.vertical li.list a span {
     float: none;
 }
-/* filename padding */
 li.list p.pad_top_20px {
     position: relative;
     top: 18px;
     float: left;
-    margin:0px; 
+    margin: 0px; 
     z-index: 100;
-
-    //left: 15px;  
 }
-
+.pad_top_20px, li.list a span{
+    font-size:.8em; 
+}
 #sort_container, #files_container {
-    float:left;
-//    width:100%;
-//    height:100%;
+    float: left;
+    width: 100%;
+    height: auto;
+    overflow: auto;
 }
-
-
 #reorder_sortable li.list a img, #files_list li.list a img
 {
+    float: left;
     position: absolute;
     top: 0;
     left: 0;  
-   
 }
-
 #reorder_sortable, #files_list { 
     list-style-type: none; 
     margin: 0px; 
     float: left; 
 }
-
 #reorder_sortable li.list, #files_list li.list { 
     position: relative;
     margin: 6px; 
@@ -103,9 +90,7 @@ li.list p.pad_top_20px {
     overflow: hidden;
     border: #333333;
     border-style: outset; 
-   // background: #002D7A;
 }
-
 #reorder_sortable li.list audio, #files_list li.list audio
 { 
     width: 80px; 
@@ -116,20 +101,16 @@ li.list p.pad_top_20px {
     opacity: 0.6;
     z-index: 200;
 }
-
-/* vertical overrides */
 #reorder_sortable.vertical li.list, #files_list.vertical li.list {
     width: 300px;  
     height: 87px;
     float: none;
     overflow: inherit;
 }
-
 #reorder_sortable.vertical li.list audio, #files_list.vertical li.list audio {
     width: 294px;
     opacity: .7; 
 }
-
 #reorder_sortable.vertical li.list a {
     padding-left: 50px;
     padding-top: 30px;
