--- a/public/assets/css/wtf-fu-show-files.css
+++ b/public/assets/css/wtf-fu-show-files.css
@@ -40,8 +40,9 @@
     padding-right: 5px;
     top: 0;
     left: 0;
+    margin: 0px;
     z-index: 100;
-    opacity: 0.7;
+    opacity: 0.7;  
 }
 #reorder_sortable.vertical li.list a, #reorder_sortable.vertical li.list p.pad_top_20px {   
     float: none;
@@ -68,6 +69,7 @@ li.list p.pad_top_20px {
 }
 #reorder_sortable li.list a img, #files_list li.list a img
 {
+    display: block;
     float: left;
     position: absolute;
     top: 0;
