updating for release 2.3.0
git-svn-id: https://plugins.svn.wordpress.org/work-the-flow-file-upload/trunk@954842 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/public/assets/css/workflow_default.css
+++ b/public/assets/css/workflow_default.css
@@ -54,6 +54,7 @@
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;  
     line-height: 1.0;
+    padding: 15px 10px 10px 30px;
 }
 
 /*.tbs .table-striped > tbody > tr:nth-child(2n+1) > td, .tbs .table-striped > tbody > tr:nth-child(2n+1) > th {
